--- a/wasm/public/test.html
+++ b/wasm/public/test.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Hello from rust-wasm-webpack!</h1>
     <h2>Check your console 🐨</h2>
-    <script async src="./code/test.js"></script>
+    <script async src="./test/test.js"></script>
 </body>
 
 </html>
