--- a/parcel/ts/index.html
+++ b/parcel/ts/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <script src="./src/test.ts" data-parcel="false"></script>
     <script src="./src/main.ts"></script>
 </body>
 
