--- a/electron/test/src/renderer/index.html
+++ b/electron/test/src/renderer/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
@@ -37,7 +38,6 @@
 
 <body>
     <div id="app"></div>
-    <!-- <script src="/webpack-dev-server.js"></script> -->
 </body>
 
 </html>
