--- a/electron/test/src/renderer/index.html
+++ b/electron/test/src/renderer/index.html
@@ -9,6 +9,7 @@
     <title>Document</title>
     <style>
         body {
+            background: #1e1e1e;
             padding: 0;
             margin: 0;
         }
