--- a/electron/test/src/renderer/index.html
+++ b/electron/test/src/renderer/index.html
@@ -9,9 +9,14 @@
     <title>Document</title>
     <style>
         body {
-            background: #1e1e1e;
-            padding: 0;
+            height: 100%;
+            width: 100%;
             margin: 0;
+            padding: 0;
+            overflow: hidden;
+            font-size: 14px;
+            user-select: none;
+            background-color: #2e3440;
         }
 
         header {
