--- a/jsx/index.html
+++ b/jsx/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="./main.js" defer></script>
+    <script src="./dist/main.js" defer></script>
 </head>
 
 <body>
