--- a/satjs_test/index.html
+++ b/satjs_test/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="./dist/main.js" defer></script>
+    <script src="/webpack-dev-server.js" defer></script>
+    <script src="/main.js" defer></script>
 </head>
 
-<body>
+<body style="margin: 0px;">
     <div id="container"></div>
 </body>
 
